// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlight Default renders correctly 1`] = `
<jest>
  <span
    class="ecl-highlight"
  />
</jest>
`;

exports[`Highlight Default renders correctly with extra attributes 1`] = `
<jest>
  <span
    class="ecl-highlight"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  />
</jest>
`;

exports[`Highlight Default renders correctly with extra class names 1`] = `
<jest>
  <span
    class="ecl-highlight custom-class custom-class--test"
  />
</jest>
`;
